# Watchdog

./: .gitignore  CMakeLists.txt  EKG.cpp  EKG.h  Heartbeat.cpp  Heartbeat.h  IWatchdogPolicy.cpp  IWatchdogPolicy.h  LICENSE  PaceMaker.cpp  PaceMaker.h  README.md  SharedMemory.cpp  SharedMemory.h  Thready.cpp  Thready.h  ThreadyMain.cpp  ThreadyMainWatchdogPolicy.cpp  ThreadyMainWatchdogPolicy.h  ThreadyState.cpp  ThreadyState.h  ThreadyWatchdogPolicy.cpp  ThreadyWatchdogPolicy.h  Watchdog.cpp  Watchdog.h  WatchdogEvent.cpp  WatchdogEvent.h  WatchdogMain.cpp  macros.h
doc/: ThreadyMain.puml  WatchdogMain.puml
doc/Links/: Boost Plugin Tutorial - 1.75.0.webloc
